# zlib

./: .gitignore  Cargo.toml  README.md  build.rs  filter-ztrace.pl  firstdiff.pl  go.cmd  output_filter.pl  perf.cmd  zlib.sln
benches/: zbench.rs
cpp_inflate_perf/: cpp_inflate_perf.cpp  cpp_inflate_perf.vcxproj  cpp_inflate_perf.vcxproj.filters  stdafx.cpp  stdafx.h
orig/: inffast.c  inflate.c  src.vcxproj  src.vcxproj.filters
src/: adler32.rs  inffast.rs  inflate.rs  inftrees.rs  lib.rs  makefile.txt  statictrees.rs  treedefs.rs  treegen.rs  treegencode.rs  zlibrs.vcxproj  zlibrs.vcxproj.filters  zlibtest.rs
src/deflate/: mod.rs
src/inflate/: inffast.rs  inffixed.rs  inftrees.rs  mod.rs  reader.rs
tests/: hamlet.tar  zlib_tests.rs
tests/zlibtest/: stdafx.cpp  stdafx.h  zlibtest.cpp  zlibtest.vcxproj  zlibtest.vcxproj.filters
