[package]

name = "zlib"
version = "0.0.1"
authors = ["Arlie Davis <arlie.davis@gmail.com>"]

build = "build.rs"

readme = "README.md"
license = "MIT"
description = "An (incomplete) port of zlib to Rust.  The decompressor works, but the compressor has not yet been ported."

[features]
default = []
unsafe_fast = []

[dependencies.crc32]
git = "https://github.com/sivadeilra/crc32.git"
